# text-search-term

./: .env  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements_dev.txt  test.txt  tox.ini
tests/: conftest.py  test_command.py
