[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "main"
authors = [{name = "sammiee5311", email = "sammiee5311@gmail.com"}]
maintainers = [{name = "sammiee5311", email = "sammiee5311@gmail.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dynamic = ["version", "description"]
dependencies = [
  "click",
  "python-dotenv"
]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
env = [
  "RESULT_FILE=./tests/result.txt",
]
testpaths = [
  "tests",
]

[tool.mypy]
ignore_missing_imports = true
exclude = ["venv/"]